<resources>
    <string name="app_name">MoviePlanner</string>
    <string name="start_app_name_title"><b>MoviePlanner</b></string>
    <string name="start_activity_touch">Нажмите, чтобы начать</string>
    <string name="fragment_home">Home Fragment</string>
    <string name="fragment_search">Search Fragment</string>
    <string name="fragment_calendar">Calendar Fragment</string>
    <string name="home_button">Home button</string>
    <string name="search_button">Search button</string>
    <string name="calendar_button">Calendar button</string>
    <string name="poster_description">poster</string>
    <string name="add_to_calendar_button">Add to calendar button</string>
    <string name="empty_movies_message">Ничего не найдено</string>
    <string name="movie_title">Movie title</string>
    <string name="genres">Movie genres</string>
    <string name="counties">Movie counties</string>
    <string name="year">Movie year</string>
    <string name="description">Movie description</string>
    <string name="rating_title">Рейтинг Кинопоиска:</string>
    <string name="rating">rate</string>
    <string name="date">Date</string>
    <string name="scheduled_movies">Запланированы</string>
    <string name="scheduled_date">Scheduled date</string>
</resources>