<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/buttonsPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.fragment.app.FragmentContainerView>

    <LinearLayout
        android:id="@+id/buttonsPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/buttons_panel_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/home"
            android:backgroundTint="@color/buttons_panel_background"
            android:contentDescription="@string/home_button"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/home" />

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/search"
            android:backgroundTint="@color/buttons_panel_background"
            android:contentDescription="@string/search_button"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/search" />

        <ImageButton
            android:id="@+id/calendarButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/calendar"
            android:backgroundTint="@color/buttons_panel_background"
            android:contentDescription="@string/calendar_button"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/calendar" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>